--- a/src/package.json
+++ b/src/package.json
@@ -11,6 +11,7 @@
 	"license": "ISC",
 	"dependencies": {
 		"bcrypt": "^5.0.1",
+		"bluebird": "^3.7.2",
 		"body-parser": "^1.19.0",
 		"ejs": "^3.1.6",
 		"express": "^4.17.1",
